@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.seeon.tv" version="0.1.0" name="azwatch.tv" provider-name="t0mm0">
+<addon id="plugin.video.seeon.tv" version="0.2.0" name="azwatch.tv" provider-name="t0mm0">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
     </requires>
